juno/qa/apps/clinical-data/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: clinical-data
  name: clinical-data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clinical-data
  template:
    metadata:
      labels:
        app: clinical-data
    spec:
      volumes:
      - name: postgres-ca-certificate
        secret:
          secretName: postgres-qa-ca-certificate
          defaultMode: 0555
      - name: ingress-ca-certificate
        secret:
          secretName: cqdg-ingress-ca-certificate
          defaultMode: 0555
      containers:
      - image: index.docker.io/ferlabcrsj/cqdg-clinical-data-service:79fb6843bf65deffc29aa2204818af196dc4c728-1698689713 # {"$imagepolicy": "cqdg-qa-fluxcd:clinical-data"}
        name: clinical-data
        volumeMounts:
        - name: postgres-ca-certificate
          mountPath: /opt/ca
          readOnly: true
        - name: ingress-ca-certificate
          mountPath: /opt/ingress-ca
          readOnly: true
        - name: ca-bundle
          mountPath: /opt/ca-bundle
          readOnly: true
        resources:
          requests:
            memory: "4Gi"
            cpu: '1.0'
          limits:
            memory: "4Gi"
            cpu: '2.0'
